--- a/front/src/components/main/main.css
+++ b/front/src/components/main/main.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem;
+    padding: 1rem;
 }
 
 .content-introduction {
@@ -18,6 +18,7 @@
     justify-content: center;
     padding: 0 10rem;
     gap: 2rem;
+    margin-top: 6rem;
 }
 
 .app__main-introduction-text {
@@ -36,7 +37,7 @@
     padding: 0.5rem 1rem;
     background-color: #000;
     border-radius: 20px;
-    color: #fff;
+    color: #ffffff;
     font-weight: bold;
     display: flex;
     align-items: center;
