--- a/front/src/pages/Chat/chat.css
+++ b/front/src/pages/Chat/chat.css
@@ -1,7 +1,7 @@
 #page__chat {
     height: 100vh;
     padding: 1.1rem;
-    background-color: black;
+    background-color: #8ac9e3;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,8 +16,8 @@
 }
 .chat_logo {
     align-self: center;
-    height: 55%;
-    width: 50%;
+    height: 20%;
+    width: 100%;
 
 }
 
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    padding: 1rem;
+    padding: 2rem;
 }
 
 .page__chat-back {
@@ -53,12 +53,13 @@
     margin: 0 1.2rem;
 }
 .chat__inputs{
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 2fr 1fr 2fr 1fr;
+    gap: 1rem;
 }
 .chat__button{
     border-radius: var(--border-radius2);
-    width: 12%;
     display: flex;
     align-items: center;
     justify-content: center;
